<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_un"
		android:icon="@drawable/menu_blanc"
		android:orderInCategory="1"
		android:title="@string/menu"
		app:showAsAction="always" />
	<item
		android:id="@+id/menu_profil"
		android:title="@string/profil"
		android:orderInCategory="1"/>

	<item
		android:id="@+id/info"
		android:orderInCategory="2"
		android:title="@string/info"/>

	<item
		android:id="@+id/menu_aide"
		android:title="@string/tv_aide_titre_entete"
		android:orderInCategory="3"/>

	<item
		android:id="@+id/menu_deconnexion"
        android:orderInCategory="4"
		android:title="@string/action_sign_out" />
	<item
		android:id="@+id/menu_statistique"
		android:orderInCategory="5"
		android:title="Liste Stats Temporaire" />
	<item
	android:id="@+id/inscription"
	android:orderInCategory="6"
	android:title="Inscription temporaire" />

</menu>