<?xml version="1.0" encoding="utf-8"?>
<!--Chaque ligne contenu dans la liste MES RÉSERVATIONS contient les éléments suivants-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="@layout/liste_reservations_row">
	<!--Afficher l'icône de la catégorie-->
	<ImageView
		android:id="@+id/iv_res_categorie"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/iv_res_categorie" />
	<!-- Wrap pour placer les informations tel que voulu -->
	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="0.1"
		android:orientation="vertical"
		android:paddingLeft="10dp"
		android:paddingRight="10dp">
		<!--Afficher le nom de la marchandise-->
		<TextView
			android:id="@+id/tv_res_nom_marchandise"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/tv_res_nom_marchandise" />
		<!--Afficher la description de la marchandise-->
		<TextView
			android:id="@+id/tv_res_description"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="0.1"
			android:text="@string/tv_res_description" />
	</LinearLayout>
	<!--Afficher la quantité de la marchandise-->
	<TextView
		android:id="@+id/tv_res_qtee_marchandise"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="0.1"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:text="@string/tv_res_qtee_marchandise" />
	<!--Afficher la date de péremption de la marchandise-->
	<TextView
		android:id="@+id/tv_res_date_marchandise"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="0.1"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:text="@string/tv_res_date_marchandise" />
	<!--Afficher le bouton pour collecter une réservation-->
	<ImageButton
		android:id="@+id/ib_res_collecter"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:layout_marginRight="5dp"
		android:background="@drawable/collecter"
		android:contentDescription="@string/ib_res_collecter" />
	<!--Afficher le bouton pour supprimer une réservation-->
	<ImageButton
		android:id="@+id/ib_res_supprimer"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:background="@drawable/x_rouge"
		android:contentDescription="@string/ib_res_supprimer" />
</merge>