<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="#ffffff">

        <!-- GRAND TITRE : Qui nous sommes? -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_titre_qui_nous_sommes"
            android:id="@+id/textView5"
            android:textSize="40sp"
            android:textColor="#70A843"
            android:layout_marginTop="10dp"
            fontPath="fonts/arialrounded.ttf"
            tools:ignore="MissingPrefix"/>

        <!-- Texte -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_texte_qui_nous_sommes"
            android:id="@+id/textView6"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <!-- TITRE : Comment nous est venue l'idée de Denrée Ô Suivant? -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sous_titre_idee"
            android:id="@+id/textView7"
            android:textSize="25sp"
            android:textColor="#70A843"
            android:layout_marginTop="10dp"
            fontPath="fonts/opensans_semibold.ttf"
            tools:ignore="MissingPrefix"/>

        <!-- Texte -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_texte_idee"
            android:id="@+id/textView8"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <!-- Texte -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_texte_idee_2"
            android:id="@+id/textView9"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <!-- TITRE : Notre mission-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_titre_mission"
            android:id="@+id/textView10"
            android:textSize="40sp"
            android:textColor="#70A843"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            fontPath="fonts/arialrounded.ttf"
            tools:ignore="MissingPrefix"/>

        <!-- SOUS-TITRE : Simplifier les dons pour les entreprises -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sous_titre_mission"
            android:id="@+id/textView11"
            android:textSize="25sp"
            android:textColor="#70A843"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            fontPath="fonts/opensans_semibold.ttf"
            tools:ignore="MissingPrefix"/>

        <!-- Texte -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_texte_mission"
            android:id="@+id/textView12"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp" />

        <!-- SOUS-TITRE : Vocation sociale et communautaire -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sous_titre_mission_2"
            android:id="@+id/textView13"
            android:textSize="25sp"
            android:textColor="#70A843"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            fontPath="fonts/opensans_semibold.ttf"
            tools:ignore="MissingPrefix"/>

        <!-- Texte -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_texte_mission_2"
            android:id="@+id/textView14"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp" />

        <!-- SOUS-TITRE : Environnement et gaspillage -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sous_titre_mission_3"
            android:id="@+id/textView15"
            android:textSize="25sp"
            android:textColor="#70A843"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            fontPath="fonts/opensans_semibold.ttf"
            tools:ignore="MissingPrefix"/>

        <!-- Texte -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_texte_mission_3"
            android:id="@+id/textView16"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp" />

        <!-- TITRE : En conclusion -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_titre_conclusion"
            android:id="@+id/textView17"
            android:textSize="40sp"
            android:textColor="#70A843"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            fontPath="fonts/arialrounded.ttf"
            tools:ignore="MissingPrefix"/>

        <!-- Texte -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_texte_conclusion"
            android:id="@+id/textView18"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
